--- a/heat.html
+++ b/heat.html
@@ -50,15 +50,15 @@
 			<div class="col-md-6">
 				<h1><img src="img/biotherm-heat.png" style="width:80px;"> <b>Heating</b> Systems</h1>
 				<h3>Efficient Greenhouse Heating</h3>
-				<h4><b>BioTherm has been at the forefront of developing highly efficient heating solutions for rugged environments since 1980.</b></h4>
+				<h4><b>Our innovative energy saving technology is designed to meet the individual needs of even the most demanding projects</b></h4>
 			</div>
 		</div>
 		<!--<div class="row header-image-credit">
 			<div class="col-md-4 offset-md-8 text-right">
-				<p>
-					Flood Floor Irrigation: <b>The Project Name</b><br />
+				<p class="dim">
+					Flood Floor Irrigation<br />
 					Ōkuma, Fukushima, Japan<br />
-					<a href="project.html">( whitepaper <i class="fas fa-external-link-alt"></i>)</a>
+					<a href="project.html">( case study <i class="fas fa-external-link-alt"></i>)</a>
 				</p>
 			</div>
 		</div>-->
@@ -77,18 +77,19 @@
 				<a href="quote.html"><button type="button" class="btn btn-danger"> Request a Quote</button></a>
 			</div>
 			<div class="col-md-7">
+				<img src="img/heat-illustration.jpg" alt="BioTherm" class="img-fluid" />
 				<div class="card card-nav-tabs">
 					<div class="card-header card-header-danger">
 						<div class="nav-tabs-navigation">
 							<div class="nav-tabs-wrapper">					
 								<ul class="nav nav-tabs" data-tabs="tabs">
-									<li class="nav-item"><a class="nav-link active" href="#Products" data-toggle="tab"> Products</a></li>
-									<li class="nav-item"><a class="nav-link" href="#Boiler" data-toggle="tab"> Boilers</a></li>
-									<li class="nav-item"><a class="nav-link" href="#Ground" data-toggle="tab"> Ground</a></li>
-									<li class="nav-item"><a class="nav-link" href="#Crop" data-toggle="tab"> Crop</a></li>
-									<li class="nav-item"><a class="nav-link" href="#Bench" data-toggle="tab"> Bench</a></li>
-									<li class="nav-item"><a class="nav-link" href="#Space" data-toggle="tab"> Space</a></li>
-									<li class="nav-item"><a class="nav-link" href="#Industry" data-toggle="tab"> Industry</a></li>
+									<li class="nav-item"><a class="nav-link active" href="#Products" data-toggle="tab"> <b>Products</b></a></li>
+									<li class="nav-item"><a class="nav-link" href="#Boiler" data-toggle="tab"> <b>Boilers</b></a></li>
+									<li class="nav-item"><a class="nav-link" href="#Ground" data-toggle="tab"> <b>Ground</b></a></li>
+									<li class="nav-item"><a class="nav-link" href="#Crop" data-toggle="tab"> <b>Crop</b></a></li>
+									<li class="nav-item"><a class="nav-link" href="#Bench" data-toggle="tab"> <b>Bench</b></a></li>
+									<li class="nav-item"><a class="nav-link" href="#Space" data-toggle="tab"> <b>Space</b></a></li>
+									<li class="nav-item"><a class="nav-link" href="#Industry" data-toggle="tab"> <b>Industry</b></a></li>
 								</ul>
 							</div>
 						</div>
@@ -96,8 +97,7 @@
 					<div class="card-body ">
 						<div class="tab-content text-center">
 							<div class="tab-pane active" id="Products">
-								<img src="img/heat-illustration.jpg" alt="BioTherm" class="img-fluid" />
-								<h4>Products</h4>	
+								<h4><b>Products</b></h4>	
 								<a href="heat-products-duofin.html"><button type="button" class="btn">DuoFin&trade;</button></a>
 								<a href="heat-products-hdx.html"><button type="button" class="btn">HDX&trade;</button></a>
 								<a href="heat-products-megatube.html"><button type="button" class="btn">MegaTube&trade;</button></a>
@@ -151,8 +151,71 @@
 				</div>
 			</div>
 		</div>
-		
-		
+	</div>
+	
+
+	<div class="container section">
+		<div class="row">
+			<div class="col-md-12">
+				<h3><b>Case Studies:</b></h3>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-4">
+				<a href="case-heat-micheals.html">
+				<span class="d-block p-4 bg-dark text-white">
+					<img src="img/case_micheals_flowers.jpg" class="figure-img img-fluid rounded" alt="">
+					<img src="img/front-climate-white-full.png" class="float-right" width=80px style="opacity: 0.1;"/> 
+					<h4><b>Patrick Herzing</b> <br />Michael’s Greenhouses<br />Cheshire, CT <br /><b>Improving Turns and Planning for the Future</b></h4>
+				</span>
+				</a>
+				<span class="d-block p-2 bg-heat text-white"></span>
+			</div>
+			<div class="col-md-4">
+				<span class="d-block p-4 bg-dark text-white">
+					<img src="img/case_Beth_Tinsdale.jpg" class="figure-img img-fluid rounded" alt="">
+					<img src="img/front-climate-white-full.png" class="float-right" width=80px style="opacity: 0.1;"/> 
+					<h4><b>Beth Tinsdale</b> <br />Beth’s Ornamentals<br />Tacoma, WA <br /><b>Controlling Costs and Improving Consistency</b></h4>
+				</span>
+				<span class="d-block p-2 bg-heat text-white"></span>
+			</div>
+			<div class="col-md-4">
+				<span class="d-block p-4 bg-dark text-white">
+					<img src="img/case_micheals_flowers.jpg" class="figure-img img-fluid rounded" alt="">
+					<img src="img/front-climate-white-full.png" class="float-right" width=80px style="opacity: 0.1;"/> 
+					<h4><b>Tiffany Allen</b> <br />Best Taste Tomatoes<br />Windsor, CA <br /><b>Improving Heating Costs and Plant Health</b></h4>
+				</span>
+				<span class="d-block p-2 bg-heat text-white"></span>
+			</div>
+		</div>
+		<br />
+		<div class="row">
+			<div class="col-md-4">
+				<span class="d-block p-4 bg-dark text-white">
+					<img src="img/case_micheals_flowers.jpg" class="figure-img img-fluid rounded" alt="">
+					<img src="img/front-climate-white-full.png" class="float-right" width=80px style="opacity: 0.1;"/> 
+					<h4><b>Randy Strode</b> <br />AgriStarts<br />Apopka, FL <br /><b>Investing in the Future</b></h4>
+				</span>
+				<span class="d-block p-2 bg-heat text-white"></span>
+			</div>
+			<div class="col-md-4">
+				<span class="d-block p-4 bg-dark text-white">
+					<img src="img/case_micheals_flowers.jpg" class="figure-img img-fluid rounded" alt="">
+					<img src="img/front-climate-white-full.png" class="float-right" width=80px style="opacity: 0.1;"/> 
+					<h4><b>Bill Noak</b> <br />Nor’Eastern Farms<br />Lowell, MA <br /><b>Upgrading for Success</b></h4>
+				</span>
+				<span class="d-block p-2 bg-heat text-white"></span>
+			</div>
+			<div class="col-md-4">
+				<span class="d-block p-4 bg-dark text-white">
+					<img src="img/case_micheals_flowers.jpg" class="figure-img img-fluid rounded" alt="">
+					<img src="img/front-climate-white-full.png" class="float-right" width=80px style="opacity: 0.1;"/> 
+					<h4><b>Manfred Orozco</b> <br />Manfred and Son’s Greenhouse, Annapolis, MD<br /><b>Improving Health and Yields</b></h4>
+				</span>
+				<span class="d-block p-2 bg-heat text-white"></span>
+			</div>
+		</div>
+
 	</div>
 </div>
 
