--- a/hydro.html
+++ b/hydro.html
@@ -104,6 +104,48 @@
 			</div>
 		</div>
 	</div>
+	
+		<div class="container section">
+			<div class="row">
+				<div class="col-md-12">
+					<h3><b>Case Studies:</b></h3>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-4">
+					<a href="#">
+					<span class="d-block p-4 bg-dark text-white">
+						<img src="img/case_micheals_flowers.jpg" class="figure-img img-fluid rounded" alt="">
+						<img src="img/front-hydro-white-full.png" class="float-right" width=80px style="opacity: 0.1;"/> 
+						<h4><b>Mansfield Growers</b> <br />Mansfield, OH <br /><b>Reducing Labor Costs and Water Conservation</b></h4>
+					</span>
+					</a>
+					<span class="d-block p-2 bg-hydro text-white"></span>
+				</div>
+				<div class="col-md-4">
+					<a href="case-hydro-fessler.html">
+					<span class="d-block p-4 bg-dark text-white">
+						<img src="img/case_fessler.jpg" class="figure-img img-fluid rounded" alt="">
+						<img src="img/front-hydro-white-full.png" class="float-right" width=80px style="opacity: 0.1;"/> 
+						<h4><b>Marvin Fessler</b> <br />Fessler’s Nursery<br />Woodburn, OR <br /><b>Irrigation Efficiency and Reduced Labor</b></h4>
+					</span>
+					</a>
+					<span class="d-block p-2 bg-hydro text-white"></span>
+				</div>
+				<div class="col-md-4">
+					<a href="case-hydro-holy-city-farms.html">
+					<span class="d-block p-4 bg-dark text-white">
+						<img src="img/case_holy-city-farms.jpg" class="figure-img img-fluid rounded" alt="">
+						<img src="img/front-hydro-white-full.png" class="float-right" width=80px style="opacity: 0.1;"/> 
+						<h4><b>Elizabeth Mitchell</b> <br />Holy City Farms<br />Charleston, SC <br /><b>Increased Yield and Healthier Plants</b></h4>
+					</span>
+					</a>
+					<span class="d-block p-2 bg-hydro text-white"></span>
+				</div>
+			</div>
+
+		</div>
+	</div>
 
 </div>
 
