--- a/air.html
+++ b/air.html
@@ -89,74 +89,64 @@
 		</div>
 	</div>
 	
-<div class="container">
-	<div class="row">
-		<div class="col-md-4">
-			<div class="card card-profile card-plain">
-				<div class="card-header card-header-image">
-					<a href="img/air_conditioning.jpg" data-toggle="lightbox" class="thumbnail" title=""><img class="img" src="img/air_conditioning.jpg" /></a>
-				</div>
-				<div class="card-body ">
-					<h4 class="card-title">DehuKing</h4>
-					<h6 class="card-category text-muted">This is not your average meter.</h6>
-					<p class="card-description">DehuKing offers free-standing, self-contained dehumidification
-systems. Optimize the air in your growing environment
-with a dehumidifier that also filters, ionizes, and
-sanitizes. Multiple options available to customize your
-dehumidification.</p>
-				</div>
-				<div class="card-footer justify-content-center">
-				</div>
+	
+	<div class="container section">
+		<div class="row">
+			<div class="col-md-12">
+				<h3><b>Case Studies:</b></h3>
 			</div>
 		</div>
-		<div class="col-md-4">
-			<div class="card card-profile card-plain">
-				<div class="card-header card-header-image">
-					<a href="img/air_enrichment.jpg" data-toggle="lightbox" class="thumbnail" title=""><img class="img" src="img/air_enrichment.jpg" /></a>
-				</div>
-				<div class="card-body ">
-					<h4 class="card-title">ChillKing</h4>
-					<h6 class="card-category text-muted"></h6>
-					<p class="card-description"> </p>
-				</div>
-				<div class="card-footer justify-content-center">
-				</div>
+		<div class="row">
+			<div class="col-md-4">
+				<a href="case-air-sunnyside.html">
+				<span class="d-block p-4 bg-dark text-white">
+					<img src="img/case_sunnyside.jpg" class="figure-img img-fluid rounded" alt="">
+					<img src="img/front-tech-white-full.png" class="float-right" width=80px style="opacity: 0.1;"/> 
+					<h4><b>Nancy Duvall</b> <br />Sunnyside Farms, CA <br /><b>Increased Yield and Faster Growth</b></h4>
+				</span>
+				</a>
+				<span class="d-block p-2 bg-success text-white"></span>
 			</div>
-		</div>
-		<div class="col-md-4">
-
-			<div class="card card-nav-tabs">
-				<div class="card-header card-header-success">
-					<div class="nav-tabs-navigation">
-						<div class="nav-tabs-wrapper">
-							<ul class="nav nav-tabs" data-tabs="tabs">
-								<li class="nav-item"><a class="nav-link active" href="#Hydra" data-toggle="tab">Hydra</a></li>
-								<li class="nav-item"><a class="nav-link" href="#Commander" data-toggle="tab">Commander</a></li>
-								<li class="nav-item"><a class="nav-link" href="#Roots" data-toggle="tab">Roots</a></li>
-							</ul>
+			<div class="col-md-4">
+				<a href="case-air-sierra.html">
+				<span class="d-block p-4 bg-dark text-white">
+					<img src="img/case_sierra.jpg" class="figure-img img-fluid rounded" alt="">
+					<img src="img/front-tech-white-full.png" class="float-right" width=80px style="opacity: 0.1;"/> 
+					<h4><b>Sierra Gold Nursery</b> <br />Sutter County, CA <br /><b>BioTherm Cooling and Heating System</b></h4>
+				</span>
+				</a>
+				<span class="d-block p-2 bg-success text-white"></span>
+			</div>
+			<div class="col-md-4">
+				<div class="card card-nav-tabs">
+					<div class="card-header card-header-success">
+						<div class="nav-tabs-navigation">
+							<div class="nav-tabs-wrapper">
+								<ul class="nav nav-tabs" data-tabs="tabs">
+									<li class="nav-item"><a class="nav-link active" href="#Dehu" data-toggle="tab">DehuKing</a></li>
+									<li class="nav-item"><a class="nav-link" href="#Chill" data-toggle="tab">ChillKing</a></li>
+								</ul>
+							</div>
 						</div>
 					</div>
-				</div>
-				<div class="card-body ">
-					<div class="tab-content text-center">
-						<div class="tab-pane active" id="Hydra">
-							<p></p>
-							<!--<a href=""><button type="button" class="btn btn-success"><i class="fas fa-shopping-cart"></i> Order Now</button></a>-->
-						</div>
-						<div class="tab-pane" id="Commander">
-							<!--<a href=""><button type="button" class="btn btn-success"><i class="fas fa-shopping-cart"></i> Order Now</button></a>-->
-						</div>
-						<div class="tab-pane" id="Roots">
-							<!--<a href=""><button type="button" class="btn btn-success"><i class="fas fa-shopping-cart"></i> Order Now</button></a>-->
+					<div class="card-body ">
+						<div class="tab-content text-center">
+							<div class="tab-pane active" id="Dehu">
+								<p>DehuKing offers free-standing, self-contained dehumidification systems. Optimize the air in your growing environment with a dehumidifier that also filters, ionizes, and sanitizes. Multiple options available to customize your dehumidification.</p>
+								<!--<a href=""><button type="button" class="btn btn-success"><i class="fas fa-shopping-cart"></i> Order Now</button></a>-->
+							</div>
+							<div class="tab-pane" id="CHill">
+								<!--<a href=""><button type="button" class="btn btn-success"><i class="fas fa-shopping-cart"></i> Order Now</button></a>-->
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-
 		</div>
+
 	</div>
-
-</div>
+	
+	
 </div>
 
 <!--     *********    FOOTER     *********      -->
