--- a/case-air-sierra.html
+++ b/case-air-sierra.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="apple-touch-icon" href="img/biotherm_apple-icon.png">
 	<link rel="icon" href="img/biotherm_icon.png">
-	<title>Case Study: Michael’s Greenhouses | BioTherm Solutions</title>
+	<title>Case Study: Sierra Gold Nursery | BioTherm Solutions</title>
 </head>
 
 <body>
@@ -42,7 +42,7 @@
 	</div>
 </nav>
 
-<div class="page-header header-smallest header-filter" data-parallax="true" style="background:#ed1c24;">
+<div class="page-header header-smallest header-filter" data-parallax="true" style="background:#16c462;">
 	<div class="container">
 
 	</div>
@@ -56,93 +56,33 @@
 	<div class="row">
 		<div class="col-md-12">
 			<span class="d-block p-4 bg-dark text-white">
-			<img src="img/front-climate-white-full.png" class="float-right" width=120px style="opacity: 0.1;"/> 
-			<h3><b>Case Study: Patrick Herzing</b> <br />Michael’s Greenhouses, Cheshire, CT <br /><b>Improving Turns and Planning for the Future</b></h3>
+				<img src="img/front-tech-white-full.png" class="float-right" width=120px style="opacity: 0.1;"/> 
+				<h3><b>Case Study: Sierra Gold Nursery</b> <br />Sutter County, CA <br /><b>BioTherm Cooling and Heating System</b></h3>
 			</span>
-			<span class="d-block p-2 bg-heat text-white"></span>
-		</div>
-	</div>
-	<div class="row">
-
-		<div class="col-md-4">
-			<br />
-			<p><span class="d-block p-2 bg-heat text-white"><b>The Challange</b></span></p>
-			<p>Michael’s Greenhouse won a contract to grow bedding plants and hanging baskets for several big box stores. To accommo- date the new business, they needed a way to turn more crops over each spring and expand the capacity of their growing operations.</p>
-			<p><br /><span class="d-block p-2 bg-heat text-white"><b>The BioTherm Solution</b></span></p>
-			<p>BioTherm provided Michael’s with a <a href="heat-products-microclimate-tubing.html">MicroClimate Floor Heating System</a> on top of his native soil. Sandwiched between two pieces of fabric, it provided an evenly heated surface across the floor space. No slab was needed for the warm floor. His flats sit directly on top of the gently heated surface. With a BioTherm MicroClimate floor heating system, Patrick was able to shorten his grow time by 4-5 weeks.</p>
-			<p>For his hanging baskets, BioTherm provided a <a href="heat-products-duofin.html">DuoFin Top Heating System</a> that gently radiates heat around the plants, maintaining a consistent and even temperature.</p>
-			<p>To plan for the future, Michael’s opted to have BioTherm design the boiler system to be easily expandable so he wouldn’t have to re-do any infrastructure.</p>
-			<p>As Michael’s expanded, so did his heat- ing system, by easily adding additional boilers. And not just the boilers, we sized the pipes and pumps for this expansion so there was no need for retrofit.</p>
-			<p><br /><span class="d-block p-2 bg-heat text-white"><b>How It Works</b></span></p>
-			<p>“With a completely heated floor surface, we were able to shorten our grow time by 4-5 weeks, increase production, and grow a more consistent and healthy crop,” Patrick said.</p>
-			<p>Also, while maintaining a gentle and con- sistent heat for his hanging basket crop, the DuoFin Top Heat System did double duty as a snow melt system for his greenhouses.</p>
-			<p>With the added benefit of high-efficiency boilers, Patrick was able to save money on fuel, adding to his bottom line. Because of the increase in energy savings, Michael’s even qualified for a grant which helped pay for the boilers!</p>
-		</div>
-		<div class="col-md-8">
+			<span class="d-block p-2 bg-success text-white"></span>
 			<figure class="figure d-block">
-			  <img src="img/case_micheals.jpg" class="figure-img img-fluid rounded" alt=""/>
-			  heat_ov_Duofin-Top-Heat.jpg
+			  <img src="img/case_sierra.jpg" class="figure-img img-fluid rounded" alt="">
 			</figure>
 		</div>
 	</div>
+	<div class="row">
+		<div class="col-md-4">
+			<p><span class="d-block p-2 bg-success text-white"><b>The Challange</b></span></p>
+			<p>When Sierra Gold Nursery decided to pursue a plant tissue culture project, they needed special rooms that could be precisely calibrated for humidity, temperature, and light. Delicate samples are expensive to cultivate, and the failure rate is unpredict- ably high. To control costs by controlling mortality, Sierra Gold needed to perfectly control the environment. BioTherm was already installing the heating solution in another project, so they asked, “Do you do cooling, too?”</p>
+		</div>
+		<div class="col-md-4">
+			<p><span class="d-block p-2 bg-success text-white"><b>The BioTherm Solution</b></span></p>
+			<p>BioTherm used high thermal-transfer StarFin<sup>TM</sup> to surround Sierra Gold’s acclimation chambers. During hot weather and when lights are running, cold water circulates within the StarFin<sup>TM</sup>, keeping the environment cool. When the seeds need more warmth, hot water flows through the same pipes.</p>
+		</div>
+		<div class="col-md-4">
+			<p><span class="d-block p-2 bg-success text-white"><b>How It Works</b></span></p>
+			<p>The boiler and chiller for all the acclima- tion chambers connect to valves above each chamber, connected to a control that monitors and controls temperature, humid- ity, and light.</p>
+		</div>
+	</div>
+
 
 	<div class="section">
-		<div class="row">
-			<div class="col-md-12">
-				<span class="d-block p-5 bg-dark text-white">
-				<h3><b>"Biotherm's DuoFin pipe provides more instant heat and reduces shade in the greenhouse. And with the BioTherm floor heat system my grow time has been cut 4-5 weeks.”</b><br /><br /><span class="float-right">—Patrick Herzing, Michael’s Greenhouse</span></h3>
-				</span>
-				<span class="d-block p-2 bg-heat text-white"></span>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-8">
-				<figure class="figure d-block">
-					<img src="img/heat_ov_microclimate-sandwhich.jpg" class="figure-img img-fluid rounded" alt=""/>
-					<figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
-				</figure>
-				
-				<img src="img/heat_ov_Duofin-Top-Heat.jpg" class="figure-img img-fluid rounded" alt=""/>
-			</div>
-			<div class="col-md-4">
-				<br />
-				<figure class="figure d-block">
-					<a href="img/case_micheals_floor.jpg" class="thumbnail fancybox" data-toggle="lightbox" >
-					<img src="img/case_micheals_floor.jpg" class="figure-img img-fluid rounded" alt=""/>
-					</a>
-					<figcaption class="figure-caption text-right">Michael’s BioTherm MicroClimate heated floor during installation</figcaption>
-				</figure>
-				<figure class="figure d-block">
-					<a href="img/post-project-micheals-2.jpg" class="thumbnail fancybox" data-toggle="lightbox" >
-					<img src="img/post-project-micheals-2.jpg" class="figure-img img-fluid rounded" alt=""/>
-					</a>
-					<figcaption class="figure-caption text-right">Infrared image of Michael’s heated floor.</figcaption>
-				</figure>
-				<figure class="figure d-block">
-					<a href="img/case_micheals_basket.jpg" class="thumbnail fancybox" data-toggle="lightbox" >
-					<img src="img/case_micheals_basket.jpg" class="figure-img img-fluid rounded" alt=""/>
-					</a>
-					<figcaption class="figure-caption text-right">&nbsp;</figcaption>
-				</figure>
-				<figure class="figure d-block">
-					<a href="img/case_michaels-hanging-baskets.jpg" class="thumbnail fancybox" data-toggle="lightbox" >
-					<img src="img/case_michaels-hanging-baskets.jpg" class="figure-img img-fluid rounded" alt=""/>
-					</a>
-					<figcaption class="figure-caption text-right">Michael’s hanging baskets.</figcaption>
-				</figure>
-			</div>
-		</div>
 	</div>
-	
-	<div class="container section">
-		<div class="row">
-			<div class="col-md-8 ml-auto mr-auto text-center">
-				<h3>Call <b>1-800-GET-HEAT</b> to get started.</h3>
-			</div>
-		</div>
-	</div>
-	
-
 
 </div>
 
@@ -199,7 +139,6 @@
 
 <script src="js/jquery.min.js"></script>
 <script src="js/popper.min.js"></script>
-<script src="js/ekko-lightbox.js"></script>
 <script src="js/bootstrap-material-design.min.js"></script>
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7ggSZufhKYdFE5PfBcy6aS4xnaX4-O_0"></script>
 <script src="js/material-kit.min.js"></script>
