--- a/case-air-sunnyside.html
+++ b/case-air-sunnyside.html
@@ -83,7 +83,16 @@
 	</div>
 
 
-	<div class="section">
+	<div class="container section">
+		<div class="row">
+			<div class="col-md-12">
+				<span class="d-block p-2 bg-success text-white"></span>
+				<img src="img/air_CO2.jpg" class="figure-img img-fluid rounded" alt=""/>
+				<span class="d-block p-2 bg-success text-white"></span>
+				<br />
+				<p>CO2 levels are naturally low in a greenhouse environment as plants use available CO2 as part of the photosynthetic process. Increasing CO2 levels above ambient conditions promotes increased plant growth and health. With the right condensing boiler system in place, a BioTherm CO2 System can be easily integrated to achieve elevated CO2 levels in the greenhouse environment. BioTherm systems pull CO2 directly from the boilers exhaust gases and distribute them uniformly into the greenhouse environment, while ensuring other harmful gases are kept at a safe level. With a BioTherm CO2 System, there is no need for large bulk tanks, or individual CO2 burners. These systems can be used in both indoor and outdoor greenhouse operations.</p>
+			</div>
+		</div>
 	</div>
 
 </div>
