--- a/heat.html
+++ b/heat.html
@@ -215,6 +215,14 @@
 				<span class="d-block p-2 bg-heat text-white"></span>
 			</div>
 		</div>
+		
+		<div class="container section">
+			<div class="row">
+				<div class="col-md-8 ml-auto mr-auto text-center">
+					<h3>Call <b>1-800-GET-HEAT</b> to get started.</h3>
+				</div>
+			</div>
+		</div>
 
 	</div>
 </div>
